// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SettingsModule /> template Should be render 1`] = `
<div
  className="settingsModule"
>
  <TitleModule
    additional=""
    className=""
    classNameTitle="settingsModuleTitle"
    title="Настройки"
  />
  <div
    className="settingsModule__main"
  >
    <div
      className="col-6"
    >
      <Scrollbars
        autoHeight={false}
        autoHeightMax={200}
        autoHeightMin={0}
        autoHide={false}
        autoHideDuration={200}
        autoHideTimeout={1000}
        hideTracksWhenNotNeeded={false}
        renderThumbHorizontal={[Function]}
        renderThumbVertical={[Function]}
        renderTrackHorizontal={[Function]}
        renderTrackVertical={[Function]}
        renderView={[Function]}
        tagName="div"
        thumbMinSize={30}
        universal={false}
      >
        <div>
          <PanelPassword
            newPassword=""
            oldPassword=""
            onSaveSettings={[Function]}
          />
          <PanelCommon
            emailValue={null}
            onSaveSettings={[Function]}
            telValue={null}
          />
          <PanelProfile
            isHideEmail={null}
            isHidePhone={null}
            onSaveSettings={[Function]}
          />
        </div>
      </Scrollbars>
    </div>
    <div
      className="col-6"
    >
      <ObserverTime
        isLoading={true}
        settingsLogs={Array []}
        title=""
      />
    </div>
  </div>
</div>
`;

exports[`<SettingsModule /> template Should be render 2`] = `
<div
  className="settingsModule"
>
  <TitleModule
    additional=""
    className=""
    classNameTitle="settingsModuleTitle"
    title="Настройки"
  />
  <div
    className="settingsModule__main"
  >
    <div
      className="col-6"
    >
      <Scrollbars
        autoHeight={false}
        autoHeightMax={200}
        autoHeightMin={0}
        autoHide={false}
        autoHideDuration={200}
        autoHideTimeout={1000}
        hideTracksWhenNotNeeded={false}
        renderThumbHorizontal={[Function]}
        renderThumbVertical={[Function]}
        renderTrackHorizontal={[Function]}
        renderTrackVertical={[Function]}
        renderView={[Function]}
        tagName="div"
        thumbMinSize={30}
        universal={false}
      >
        <div>
          <PanelPassword
            newPassword=""
            oldPassword=""
            onSaveSettings={[Function]}
          />
          <PanelCommon
            emailValue={null}
            onSaveSettings={[Function]}
            telValue={null}
          />
          <PanelProfile
            isHideEmail={null}
            isHidePhone={null}
            onSaveSettings={[Function]}
          />
        </div>
      </Scrollbars>
    </div>
    <div
      className="col-6"
    >
      <ObserverTime
        isLoading={false}
        settingsLogs={Array []}
        title=""
      />
    </div>
  </div>
</div>
`;
